--- a/index.html
+++ b/index.html
@@ -1372,7 +1372,7 @@ ul, li {
   .svg-header {
     margin-top: -60px; }
     .svg-header path {
-      fill: white; }
+      visibility: hidden; }
     .svg-header #wave1 {
       visibility: hidden; }
   .img {
@@ -1466,7 +1466,8 @@ ul, li {
   .svg-header {
     margin-top: -140px; }
     .svg-header path {
-      fill: white; }
+      fill: white;
+      visibility: visible; }
     .svg-header #wave1 {
       visibility: hidden; } }
 
